Update dependencies and plugins to the latest versions